test/testdata/nil/invalid_property_access_error.lox
// error: property access is not valid for 'nil' object
// lint warning: property 'y' has not been declared or assigned anywhere
nil.y;
